minor logo fix on IE
added height 100%

--- a/2020/scss/custom.scss
+++ b/2020/scss/custom.scss
@@ -464,6 +464,7 @@ section.results {
 
 .logo-results {
     width: 69px;
+    height: 100%;
     padding: 5px 5px 5px 0;
 }
 
